// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable renders column pivot header without offset when rollup is disabled 1`] = `
<div
  className="container"
>
  <div
    className="scrollContainer"
  >
    <div
      className="DataTable__MessageContainer-sc-1lznsxb-0 kfUpZT"
    >
      <table
        className="table table-condensed DataTable__Table-sc-1lznsxb-1 colYnb"
      >
        <thead>
          <tr>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                TCP
                <span
                  className="caret"
                />
              </span>
            </th>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                UDP
                <span
                  className="caret"
                />
              </span>
            </th>
          </tr>
          <tr>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  className="field-element  "
                >
                  count()
                </span>
                <span
                  className="caret"
                />
              </span>
            </th>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  className="field-element  "
                >
                  count()
                </span>
                <span
                  className="caret"
                />
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="message-group"
        >
          <tr
            className="fields-row"
          >
            <td>
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                239
                <span
                  className="caret"
                />
              </span>
            </td>
            <td>
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                226
                <span
                  className="caret"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DataTable should render with empty data 1`] = `
<div
  className="container"
>
  <div
    className="scrollContainer"
  >
    <div
      className="DataTable__MessageContainer-sc-1lznsxb-0 kfUpZT"
    >
      <table
        className="table table-condensed DataTable__Table-sc-1lznsxb-1 colYnb"
      >
        <thead>
          <tr />
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`DataTable should render with filled data with rollup 1`] = `
<div
  className="container"
>
  <div
    className="scrollContainer"
  >
    <div
      className="DataTable__MessageContainer-sc-1lznsxb-0 kfUpZT"
    >
      <table
        className="table table-condensed DataTable__Table-sc-1lznsxb-1 colYnb"
      >
        <thead>
          <tr>
            <th
              className="leftAligned"
              colSpan={2}
            />
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                hulud.net
                <span
                  className="caret"
                />
              </span>
            </th>
          </tr>
          <tr>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  className="field-element  "
                >
                  timestamp
                </span>
                <span
                  className="caret"
                />
              </span>
            </th>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  className="field-element  "
                >
                  count()
                </span>
                <span
                  className="caret"
                />
              </span>
            </th>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  className="field-element  "
                >
                  count()
                </span>
                <span
                  className="caret"
                />
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="message-group"
        >
          <tr
            className="fields-row"
          >
            <td>
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                2018-10-04T09:43:50.000Z
                <span
                  className="caret"
                />
              </span>
            </td>
            <td>
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                408
                <span
                  className="caret"
                />
              </span>
            </td>
            <td>
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                408
                <span
                  className="caret"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DataTable should render with filled data without rollup 1`] = `
<div
  className="container"
>
  <div
    className="scrollContainer"
  >
    <div
      className="DataTable__MessageContainer-sc-1lznsxb-0 kfUpZT"
    >
      <table
        className="table table-condensed DataTable__Table-sc-1lznsxb-1 colYnb"
      >
        <thead>
          <tr>
            <th
              className="leftAligned"
              colSpan={1}
            />
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                hulud.net
                <span
                  className="caret"
                />
              </span>
            </th>
          </tr>
          <tr>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  className="field-element  "
                >
                  timestamp
                </span>
                <span
                  className="caret"
                />
              </span>
            </th>
            <th
              className="leftAligned"
              colSpan={1}
            >
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  className="field-element  "
                >
                  count()
                </span>
                <span
                  className="caret"
                />
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="message-group"
        >
          <tr
            className="fields-row"
          >
            <td>
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                2018-10-04T09:43:50.000Z
                <span
                  className="caret"
                />
              </span>
            </td>
            <td>
              <span
                className="dropdowntoggle"
                onClick={[Function]}
                role="presentation"
              >
                408
                <span
                  className="caret"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
